Fix a threading crash caused by transformation masks

The mask must not access pixels outside its need rect, it breaks
a contract between it and the scheduler. And since affine transformations
use bilinear interpolation, we should provide one more pixel in needRect.

BUG:412488