libs/image/kis_transform_mask.cpp
@@ -374,6 +374,13 @@ QRect KisTransformMask::needRect(const QRect& rect, PositionToFilthy pos) const
         KisSafeTransform transform(m_d->worker.forwardTransform(), limitingRect, interestRect);
         needRect = transform.mapRectBackward(rect);
 
+        /**
+         * When sampling affine transformations we use KisRandomSubAccessor,
+         * which uses bilinear interpolation for calculating pixels. Therefore,
+         * we need to extend the sides of the need rect by one pixel.
+         */
+        needRect = kisGrowRect(needRect, 1);
+
     } else {
         needRect = m_d->params->nonAffineNeedRect(rect, interestRect);
     }
